# oxo

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: build-docker.yml
src/: bot.rs  commands.rs  embed_ext.rs  endpoints.rs  error.rs  events.rs  main.rs  mappers.rs
src/api/: endpoints.rs  mod.rs  types.rs
src/bot/: bot.rs  commands.rs  events.rs  mod.rs
src/client/: bot.rs  commands.rs  embed_ext.rs  events.rs  mod.rs
