[package]
name = "oxo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal"] }
poise = "0.5.2"
dotenvy = "0.15.6"
songbird = { version = "0.3.0", features = ["yt-dlp"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "chrono",
    "client",
    "gateway",
    "http",
    "model",
    "cache",
    "utils",
    "rustls_backend",
]
version = "0.11"
